--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
+    namespace 'com.immortals.tw'
+    compileSdkVersion 34
     defaultConfig {
-        applicationId "com.immortaltaoists.en"
+        applicationId "com.wuxia001.discount.coupon.free.sale.code.cheap.gp"
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -17,6 +18,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
 
@@ -29,18 +31,20 @@ android {
 
     //指定jdk版本
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
+
 
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(name: 'cafeSdk-4.4.1', ext: 'aar')
-    implementation(name: 'NCGsdk_1.0', ext: 'aar')
+    implementation(name: 'NCGsdk_1.1.0', ext: 'aar')
     //谷歌需要依赖
-    implementation 'com.google.android.play:core:1.10.3'
+//    implementation 'com.google.android.play:core:1.10.3'
+    implementation 'com.google.android.play:review:2.0.1'//todo 1.1.0版本新增
     implementation 'com.google.gms:google-services:4.3.15'
     implementation 'com.google.android.gms:play-services-analytics:18.0.4'
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
@@ -53,12 +57,12 @@ dependencies {
     api 'com.facebook.android:audience-network-sdk:6.16.0'
 
     //广告SDK
-    implementation 'com.google.android.gms:play-services-ads:22.4.0'
-    implementation 'com.google.ads.mediation:applovin:11.11.3.0'
+    implementation 'com.google.android.gms:play-services-ads:23.3.0'//todo 1.1.0版本修改
+    implementation 'com.google.ads.mediation:applovin:12.6.0.0'//todo 1.1.0版本修改
     implementation 'com.google.ads.mediation:facebook:6.16.0.0'
 
     // firebase相关SDK
-    implementation platform('com.google.firebase:firebase-bom:32.3.1')
+    implementation platform('com.google.firebase:firebase-bom:33.1.2')//todo 1.1.0版本修改
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-messaging'
