--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jul 21 19:30:26 CST 2020
-sdk.dir=D\:\\Program Files\\Android\\sdk
+#Wed Feb 07 16:43:55 CST 2024
+sdk.dir=/Users/admin/Library/Android/sdk
